fixed missalignment

--- a/css/style.css
+++ b/css/style.css
@@ -70,7 +70,7 @@ nav.top-nav > ul > li > a {
 nav > .hamburger-menu {
   width: 48px;
   height: 24px;
-  margin: 24px 24px;
+  margin: 24px 14px;
   cursor: pointer;
   background: none;
   border: none;
